--- a/index.html
+++ b/index.html
@@ -9,17 +9,54 @@
   <link href="https://fonts.googleapis.com/css2?family=Hind&family=Nobile:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
   <title>Makers | Share stories</title>
   <link rel="stylesheet" href="/css/global.css">
+  <link rel="stylesheet" href="/css/media.css">
 </head>
 <body class="page-wrapper">
-  <header>
-    <img src="/logo/makers-logo@2x.png" class="logo" alt="Makers logo">
+  <header class="header-layout">
+    <a href="/index.html">
+      <img src="/logo/makers-logo@2x.png" class="logo" alt="Makers logo">
+    </a>
+    <div class="nav-align">
+      <nav class="nav-links">
+        <ul class="nav-unique" id="nav-unique">
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="women.html">Women</a></li>
+            <li><a href="men.html">Men</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+      </nav>
+    </div>
   </header>
   <main>
     <section class="hero">
       <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
+      <h1>Hello friends</h1>
     </section>
-    
   </main>
   <footer>Footer section</footer>
+  <script src="/js/app.js"></script>
 </body>
 </html>
