created hero section

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Hind&family=Nobile:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
   <title>Makers | Share stories</title>
   <link rel="stylesheet" href="/css/global.css">
+  <link rel="stylesheet" href="/css/index.css">
   <link rel="stylesheet" href="/css/media.css">
 </head>
 <body class="page-wrapper">
   <header class="header-layout">
     <a href="/index.html">
-      <img src="/logo/makers-logo@2x.png" class="logo" alt="Makers logo">
+      <img src="/assets/logo/makers-logo@2x.png" class="logo" alt="Makers logo">
     </a>
     <div class="nav-align">
       <nav class="nav-links">
@@ -35,25 +36,15 @@
   </header>
   <main>
     <section class="hero">
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
-      <h1>Hello friends</h1>
+      <div class="hero-text">
+        <div class="hero-genre">Photography</div>
+        <a class="hero-title-link" href="#">
+          <h1 class="hero-title">This is a heading for a blog post which will eventually be in this place.</h1>
+        </a> 
+      </div>
+    </section>
+    <section class="latest-posts">
+      
     </section>
   </main>
   <footer>Footer section</footer>
