--- a/index.html
+++ b/index.html
@@ -44,10 +44,49 @@
       </div>
     </section>
     <section class="latest-posts">
-      
+      <div class="latest-posts-text">
+        <h2>Latest posts</h2>
+      </div>
+      <div class="card-wrapper">
+        <div class="scrolling-cards">
+          <a class="blog-link" href="#">
+            <article class="blog-card">
+              <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
+              <div class="article-details">
+                <p class="blog-card-author">Author name</p>
+                <h3 class="blog-card-title">Title of blog post</h3>
+              </div>
+            </article>
+          </a>
+          <a class="blog-link" href="#">
+            <article class="blog-card">
+              <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
+              <div class="article-details">
+                <p class="blog-card-author">Author name</p>
+                <h3 class="blog-card-title">Title of blog post</h3>
+              </div>
+            </article>
+          </a>
+          <a class="blog-link" href="#">
+            <article class="blog-card">
+              <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
+              <div class="article-details">
+                <p class="blog-card-author">Author name</p>
+                <h3 class="blog-card-title">Title of blog post</h3>
+              </div>
+            </article>
+          </a>
+        </div>
+        <div class="button-wrapper">
+          <button>Left</button>
+          <button>Right</button>
+        </div>
+      </div>
     </section>
   </main>
   <footer>Footer section</footer>
   <script src="/js/app.js"></script>
 </body>
 </html>
+
+
