adjusted scrolling card layout

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Hind&family=Nobile:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
@@ -46,6 +47,15 @@
     <section class="latest-posts">
       <div class="latest-posts-text">
         <h2>Latest posts</h2>
+        <p class="section-description">A selection of this months featured artists stories.</p>
+      </div>
+      <div class="button-wrapper">
+        <div class="arrow-button">
+          <i class="fas fa-chevron-left"></i>
+        </div>
+        <div class="arrow-button">
+          <i class="fas fa-chevron-right"></i>
+        </div>
       </div>
       <div class="card-wrapper">
         <div class="scrolling-cards">
@@ -53,8 +63,8 @@
             <article class="blog-card">
               <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
               <div class="article-details">
-                <p class="blog-card-author">Author name</p>
-                <h3 class="blog-card-title">Title of blog post</h3>
+                <address class="author">Jason Gennaro</address>
+                <h4 class="blog-card-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4>
               </div>
             </article>
           </a>
@@ -62,8 +72,8 @@
             <article class="blog-card">
               <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
               <div class="article-details">
-                <p class="blog-card-author">Author name</p>
-                <h3 class="blog-card-title">Title of blog post</h3>
+                <address class="author">Jason Gennaro</address>
+                <h4 class="blog-card-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4>
               </div>
             </article>
           </a>
@@ -71,15 +81,12 @@
             <article class="blog-card">
               <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
               <div class="article-details">
-                <p class="blog-card-author">Author name</p>
-                <h3 class="blog-card-title">Title of blog post</h3>
+                <address class="author">Jason Gennaro</address>
+                <h4 class="blog-card-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4>
               </div>
             </article>
           </a>
-        </div>
-        <div class="button-wrapper">
-          <button>Left</button>
-          <button>Right</button>
+          
         </div>
       </div>
     </section>
