--- a/index.html
+++ b/index.html
@@ -90,6 +90,23 @@
         </div>
       </div>
     </section>
+    <section class="featured">
+      <div class="featured-text">
+        <h2>Featured</h2>
+        <p class="section-description">A selection of this months featured artists stories.</p>
+      </div>
+      <div class="featured-posts">
+        <a class="blog-link" href="#">
+          <article class="featured-post one">
+            <div>
+              <h4 class="featured-title">Art piece title</h4>
+              <p class="featured-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, excepturi commodi asperiores perferendis fugit voluptate deleniti! Delectus natus tenetur eligendi labore.</p>
+            </div>
+            <img class="featured-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
+          </article>
+        </a>
+      </div>
+    </section>
   </main>
   <footer>Footer section</footer>
   <script src="/js/app.js"></script>
