featured flex layout added

--- a/index.html
+++ b/index.html
@@ -95,10 +95,19 @@
         <h2>Featured</h2>
         <p class="section-description">A selection of this months featured artists stories.</p>
       </div>
-      <div class="featured-posts">
+      <div class="featured-container">
         <a class="blog-link" href="#">
           <article class="featured-post one">
-            <div>
+            <div class="featured-text-container">
+              <h4 class="featured-title">Art piece title</h4>
+              <p class="featured-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, excepturi commodi asperiores perferendis fugit voluptate deleniti! Delectus natus tenetur eligendi labore.</p>
+            </div>
+            <img class="featured-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
+          </article>
+        </a>
+        <a class="blog-link" href="#">
+          <article class="featured-post two">
+            <div class="featured-text-container">
               <h4 class="featured-title">Art piece title</h4>
               <p class="featured-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, excepturi commodi asperiores perferendis fugit voluptate deleniti! Delectus natus tenetur eligendi labore.</p>
             </div>
