--- a/index.html
+++ b/index.html
@@ -21,11 +21,17 @@
     <div class="nav-align">
       <nav class="nav-links">
         <ul class="nav-unique" id="nav-unique">
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="women.html">Women</a></li>
-            <li><a href="men.html">Men</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html" class="active nav-style">Home</a></li>
+            <li><a href="blog.html" class="nav-style">Blog</a><button class="blog-button"><i class="fas fa-chevron-down"></i></button>
+              <ul class="blog-content">
+                <li><a href="#" class="nav-style secondary">Photography</a></li>
+                <li><a href="#" class="nav-style secondary">Illustration</a></li>
+                <li><a href="#" class="nav-style secondary">Music</a>
+                <li><a href="#" class="nav-style secondary">film</a>
+              </ul>
+            </li>
+            <li><a href="about.html" class="nav-style">About Us</a></li>
+            <li><a href="contact.html" class="nav-style">Contact</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
@@ -170,13 +176,27 @@
     </section>
   </main>
   <footer>
-  <div class="footer-content">
-    <h4 class="footer-heading">Get stories straight to your inbox?</h4>
-    <form action="#" method="POST" id="signup-form" class="footer-form">
-        <input type="email" name="email" class="footer-input" placeholder="Type email here...">
-        <input type="submit" form="signup-form" value="SIGN UP NOW" onclick="alert('Success!')" class="button">
-    </form>
-  </div>
+    <div class="footer-content">
+      <div class="footer-form-wrapper">
+        <h4 class="footer-heading">Get stories straight to your inbox?</h4>
+        <form class="footer-form">
+            <input type="email" name="email" autocomplete="off" class="footer-input" placeholder="Type email here..." required>
+            <button class="footer-button">
+              <div class="arrow-button">
+                <i class="fas fa-chevron-right"></i>
+              </div>
+            </button>
+        </form>
+      </div>
+      <div class="footer-links">
+        <ul class="footer-link-layout">
+          <li><a class="footer-link-style" href="">Contact</a></li>
+          <li><a class="footer-link-style" href="">About Us</a></li>
+          <li><a class="footer-link-style" href="">Facebook</a></li>
+          <li><a class="footer-link-style" href="">Instagram</a></li>
+        </ul>
+      </div>
+    </div>
   </footer>
   <script src="/js/app.js"></script>
 </body>
