completed layout for article page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <main>
     <section class="hero">
       <div class="hero-text">
-        <div class="hero-genre">Photography</div>
+        <div class="genre">Photography</div>
         <a class="hero-title-link" href="#">
           <h1 class="hero-title">This is a heading for a blog post which will eventually be in this place.</h1>
         </a> 
@@ -92,7 +92,6 @@
               </div>
             </article>
           </a>
-          
         </div>
       </div>
     </section>
