created blog page layout

--- a/blog-article.html
+++ b/blog-article.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Hind&family=Nobile:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
+  <script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
   <title>Makers | Blog article</title>
   <link rel="stylesheet" href="/css/global.css">
   <link rel="stylesheet" href="/css/blog-article.css">
@@ -46,8 +47,8 @@
     <section class="article-container">
       <article class="article-wrapper">
         <section class="article-heading">
-          <div class="genre">About Us</div>
-          <h1>A Story about how we started Makers</h1>
+          <div class="genre">Blog post genre</div>
+          <h1 class="article-title">This is a blog post title</h1>
         </section>
         <p>
           Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
@@ -62,11 +63,56 @@
         <section class="article-share">
           <p>Share this article...</p>
           <ul>
-            <li><a class="article-link" href="">Facebook</a></li>
-            <li><a class="article-link" href="">Twitter</a></li>
+            <li><a class="article-link" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2F127.0.0.1%3A5500%2Fblog-article.html&amp;src=sdkpreparse" target="_blank">Facebook</a></li>
+            <li><a class="article-link" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fblog-article.com%2F">Twitter</a></li>
           </ul>
         </section>
       </article>
+      </div>
+    </section>
+    <section class="latest-posts">
+      <div class="scrolling-text">
+        <h2>Read More</h2>
+        <p class="section-description">Other articles in the same category</p>
+      </div>
+      <div class="button-wrapper">
+        <div class="arrow-button">
+          <i class="fas fa-chevron-left"></i>
+        </div>
+        <div class="arrow-button">
+          <i class="fas fa-chevron-right"></i>
+        </div>
+      </div>
+      <div class="card-wrapper">
+        <div class="scrolling-cards">
+          <a class="blog-link" href="#">
+            <article class="blog-card">
+              <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
+              <div class="article-details">
+                <address class="author">Jason Gennaro</address>
+                <h4 class="blog-card-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4>
+              </div>
+            </article>
+          </a>
+          <a class="blog-link" href="#">
+            <article class="blog-card">
+              <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
+              <div class="article-details">
+                <address class="author">Jason Gennaro</address>
+                <h4 class="blog-card-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4>
+              </div>
+            </article>
+          </a>
+          <a class="blog-link" href="#">
+            <article class="blog-card">
+              <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
+              <div class="article-details">
+                <address class="author">Jason Gennaro</address>
+                <h4 class="blog-card-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4>
+              </div>
+            </article>
+          </a>
+        </div>
       </div>
     </section>
   </main>
