--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <h4 class="featured-title">Art piece title</h4>
               <p class="featured-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, excepturi commodi asperiores perferendis fugit voluptate deleniti! Delectus natus tenetur eligendi labore.</p>
             </div>
-            <img class="featured-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
+            <img class="featured-image second-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
           </article>
         </a>
       </div>
