--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="/css/contact.css">
   <link rel="stylesheet" href="/css/media.css">
 </head>
-<body class="page-wrapper">
+<body class="page-wrapper contact">
   <header class="header-layout">
     <a href="/index.html">
       <img src="/assets/logo/makers-logo@2x.png" class="logo" alt="Makers logo">
@@ -43,12 +43,17 @@
   </header>
   <main>
     <div class="form-container">
-      <form id="contact-form" action="/thank-you.html" method="post">
+      <form id="contact-form" action="" method="post">
         <div class="form-styles">
-          <input type="text" name="name" required placeholder="Name here">
-          <input type="email" name="email" required placeholder="name@example.com">
-          <input type="text" name="subject" minlength="4" maxlength="20" required placeholder="Subject here">
-          <textarea type="text" name="message" cols="30" rows="10" required placeholder="Message here"></textarea>
+          <label for="nameInput">Name*</label>
+          <input class="form-control" id="nameInput" type="text" name="name" minlength="5" required placeholder="Name here" title="Should be more than 5 characters long">
+          <label for="emailInput">Email*</label>
+          <input class="form-control" id="emailInput" type="email" name="email" required placeholder="name@example.com">
+          <small class="error-message">Please enter a valid e-mail address</small>
+          <label for="subjectInput">Subject*</label>
+          <input class="form-control" id="subjectInput" type="text" name="subject" minlength="15" maxlength="50" required placeholder="Subject here" title="Should be more than 15 characters long">
+          <label for="messageInput">Message*</label>
+          <textarea class="form-control" id="messageInput" type="text" name="message" cols="30" rows="10" minlength="25" required placeholder="Message here" title="Should be more than 25 characters long"></textarea>
           <button>Submit</button>
         </div>
       </form>
@@ -59,5 +64,6 @@
 
   </footer>
   <script src="/js/contact.js"></script>
+  <script src="/js/app.js"></script>
 </body>
 </html>
