--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
           <input class="form-control" id="subjectInput" type="text" name="subject" minlength="15" maxlength="50" required placeholder="Subject here" title="Should be more than 15 characters long">
           <label for="messageInput">Message*</label>
           <textarea class="form-control" id="messageInput" type="text" name="message" cols="30" rows="10" minlength="25" required placeholder="Message here" title="Should be more than 25 characters long"></textarea>
-          <button>Submit</button>
+          <button class="contact-button">Submit</button>
         </div>
       </form>
     </div>
