working on More button for blog page

--- a/blog.html
+++ b/blog.html
@@ -58,58 +58,9 @@
         <button class="filter-selection">Film</button>
       </div>
       <div class="blog-container">
-        <a class="blog-link" href="#">
-          <article class="blog-card">
-            <img class="blog-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" alt="">
-            <address class="author">Chad Evergreen</address>
-            <h4 class="blog-card-title">This will be the best blog post ever</h4>
-          </article>
-        </a>
-        <a class="blog-link" href="#">
-          <article class="blog-card">
-            <img class="blog-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" alt="">
-            <address class="author">Chad Evergreen</address>
-            <h4 class="blog-card-title">This will be the best blog post ever</h4>
-          </article>
-        </a>
-        <a class="blog-link" href="#">
-          <article class="blog-card">
-            <img class="blog-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" alt="">
-            <address class="author">Chad Evergreen</address>
-            <h4 class="blog-card-title">This will be the best blog post ever</h4>
-          </article>
-        </a>
-        <a class="blog-link" href="#">
-          <article class="blog-card">
-            <img class="blog-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" alt="">
-            <address class="author">Chad Evergreen</address>
-            <h4 class="blog-card-title">This will be the best blog post ever</h4>
-          </article>
-        </a>
-        <a class="blog-link" href="#">
-          <article class="blog-card">
-            <img class="blog-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" alt="">
-            <address class="author">Chad Evergreen</address>
-            <h4 class="blog-card-title">This will be the best blog post ever</h4>
-          </article>
-        </a>
-        <a class="blog-link" href="#">
-          <article class="blog-card">
-            <img class="blog-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" alt="">
-            <address class="author">Chad Evergreen</address>
-            <h4 class="blog-card-title">This will be the best blog post ever</h4>
-          </article>
-        </a>
-        <a class="blog-link" href="#">
-          <article class="blog-card">
-            <img class="blog-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" alt="">
-            <address class="author">Chad Evergreen</address>
-            <h4 class="blog-card-title">This will be the best blog post ever</h4>
-          </article>
-        </a>
       </div>
       <div class="more-button">
-        <button>
+        <button class="load-more">
           <i class="fas fa-ellipsis-h"></i>
         </button>
       </div>
