first commit of scrolling cards script

--- a/blog-article.html
+++ b/blog-article.html
@@ -65,33 +65,7 @@
       </div>
       <div class="card-wrapper">
         <div class="scrolling-cards">
-          <a class="blog-link" href="#">
-            <article class="blog-card">
-              <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
-              <div class="article-details">
-                <address class="author">Jason Gennaro</address>
-                <h4 class="blog-card-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4>
-              </div>
-            </article>
-          </a>
-          <a class="blog-link" href="#">
-            <article class="blog-card">
-              <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
-              <div class="article-details">
-                <address class="author">Jason Gennaro</address>
-                <h4 class="blog-card-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4>
-              </div>
-            </article>
-          </a>
-          <a class="blog-link" href="#">
-            <article class="blog-card">
-              <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
-              <div class="article-details">
-                <address class="author">Jason Gennaro</address>
-                <h4 class="blog-card-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4>
-              </div>
-            </article>
-          </a>
+          
         </div>
       </div>
     </section>
@@ -101,5 +75,6 @@
   </footer>
 <script src="/js/app.js"></script>
 <script src="/js/blogArticle.js"></script>
+<script src="/js/scrollingCards.js"></script>
 </body>
 </html>
