added click scroll function to horizontal scroll cards

--- a/blog-article.html
+++ b/blog-article.html
@@ -46,14 +46,13 @@
     <div class="blog-header"></div>
     <section class="article-container">
       <article class="article-wrapper">
-        
       </article>
       </div>
     </section>
     <section class="latest-posts">
       <div class="scrolling-text">
         <h2>Read More</h2>
-        <p class="section-description">Other articles in the same category</p>
+        <p class="section-description">Other articles from our makers</p>
       </div>
       <div class="button-wrapper">
         <div class="arrow-button">
@@ -65,7 +64,6 @@
       </div>
       <div class="card-wrapper">
         <div class="scrolling-cards">
-          
         </div>
       </div>
     </section>
