--- a/index.html
+++ b/index.html
@@ -43,17 +43,12 @@
   </header>
   <main>
     <section class="hero">
-      <div class="hero-text">
-        <div class="genre">Photography</div>
-        <a class="hero-title-link" href="#">
-          <h1 class="hero-title">This is a heading for a blog post which will eventually be in this place.</h1>
-        </a> 
-      </div>
+      
     </section>
     <section class="latest-posts">
       <div class="scrolling-text">
         <h2>Latest posts</h2>
-        <p class="section-description">A selection of this months featured artists stories.</p>
+        <p class="section-description">Read through our latest makers stories</p>
       </div>
       <div class="button-wrapper">
         <div class="arrow-button">
@@ -65,33 +60,6 @@
       </div>
       <div class="card-wrapper">
         <div class="scrolling-cards">
-          <a class="blog-link" href="#">
-            <article class="blog-card">
-              <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
-              <div class="article-details">
-                <address class="author">Jason Gennaro</address>
-                <h4 class="blog-card-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4>
-              </div>
-            </article>
-          </a>
-          <a class="blog-link" href="#">
-            <article class="blog-card">
-              <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
-              <div class="article-details">
-                <address class="author">Jason Gennaro</address>
-                <h4 class="blog-card-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4>
-              </div>
-            </article>
-          </a>
-          <a class="blog-link" href="#">
-            <article class="blog-card">
-              <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
-              <div class="article-details">
-                <address class="author">Jason Gennaro</address>
-                <h4 class="blog-card-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4>
-              </div>
-            </article>
-          </a>
         </div>
       </div>
     </section>
@@ -101,24 +69,7 @@
         <p class="section-description">A selection of this months featured artists stories.</p>
       </div>
       <div class="featured-container">
-        <a class="blog-link" href="#">
-          <article class="featured-post one">
-            <div class="featured-text-container">
-              <h4 class="featured-title">Art piece title</h4>
-              <p class="featured-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, excepturi commodi asperiores perferendis fugit voluptate deleniti! Delectus natus tenetur eligendi labore.</p>
-            </div>
-            <img class="featured-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
-          </article>
-        </a>
-        <a class="blog-link" href="#">
-          <article class="featured-post two">
-            <div class="featured-text-container">
-              <h4 class="featured-title">Art piece title</h4>
-              <p class="featured-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, excepturi commodi asperiores perferendis fugit voluptate deleniti! Delectus natus tenetur eligendi labore.</p>
-            </div>
-            <img class="featured-image second-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
-          </article>
-        </a>
+        
       </div>
     </section>
     <section class="contact-us">
@@ -198,6 +149,8 @@
     </div>
   </footer>
   <script src="/js/app.js"></script>
+  <script src="/js/index.js"></script>
+  <script src="/js/scrollingCards.js"></script>
 </body>
 </html>
 
