finished homepage data import

--- a/index.html
+++ b/index.html
@@ -86,41 +86,15 @@
       </div>
       <div class="button-wrapper">
         <div class="arrow-button">
-          <i class="fas fa-chevron-left"></i>
+          <i class="fas fa-chevron-left left"></i>
         </div>
         <div class="arrow-button">
-          <i class="fas fa-chevron-right"></i>
+          <i class="fas fa-chevron-right right"></i>
         </div>
       </div>
       <div class="card-wrapper">
-        <div class="scrolling-cards">
-          <a class="blog-link" href="#">
-            <article class="blog-card">
-              <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
-              <div class="article-details">
-                <address class="author">Jason Gennaro</address>
-                <h4 class="blog-card-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4>
-              </div>
-            </article>
-          </a>
-          <a class="blog-link" href="#">
-            <article class="blog-card">
-              <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
-              <div class="article-details">
-                <address class="author">Jason Gennaro</address>
-                <h4 class="blog-card-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4>
-              </div>
-            </article>
-          </a>
-          <a class="blog-link" href="#">
-            <article class="blog-card">
-              <img class="blog-card-image" src="/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" />
-              <div class="article-details">
-                <address class="author">Jason Gennaro</address>
-                <h4 class="blog-card-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4>
-              </div>
-            </article>
-          </a>
+        <div class="scrolling-cards photography">
+          
         </div>
       </div>
     </section>
@@ -151,6 +125,7 @@
   <script src="/js/app.js"></script>
   <script src="/js/index.js"></script>
   <script src="/js/scrollingCards.js"></script>
+  
 </body>
 </html>
 
