--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <div class="nav-align">
       <nav class="nav-links">
         <ul class="nav-unique" id="nav-unique">
-            <li><a href="index.html" class="active nav-style">Home</a></li>
+            <li><a href="index.html" class="nav-style">Home</a></li>
             <li><a href="blog.html" class="nav-style">Blog</a><button class="blog-button"><i class="fas fa-chevron-down"></i></button>
               <ul class="blog-content">
                 <li><a href="#" class="nav-style secondary">Photography</a></li>
@@ -31,7 +31,7 @@
               </ul>
             </li>
             <li><a href="about.html" class="nav-style">About Us</a></li>
-            <li><a href="contact.html" class="nav-style">Contact</a></li>
+            <li><a href="contact.html" class="active nav-style">Contact</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
