created filter for blog page

--- a/blog.html
+++ b/blog.html
@@ -62,11 +62,11 @@
     </section>
     <section class="blog-contents">
       <div class="filter-container">
-        <button class="filter-selection">All</button>
-        <button class="filter-selection">Photography</button>
-        <button class="filter-selection">Illustration</button>
-        <button class="filter-selection">Music</button>
-        <button class="filter-selection">Film</button>
+        <button class="filter-all">All</button>
+        <button class="filter-photo">Photography</button>
+        <button class="filter-illustration">Illustration</button>
+        <button class="filter-music">Music</button>
+        <button class="filter-film">Film</button>
       </div>
       <div class="blog-container">
       </div>
