--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
     <div class="footer-content">
       <div class="footer-form-wrapper">
         <h4 class="footer-heading">Get stories straight to your inbox?</h4>
-        <form class="footer-form">
-            <input type="email" name="email" autocomplete="off" class="footer-input" placeholder="Type email here..." required>
+        <form class="footer-form" action="http://www.makerstories.no/wp-json/contact-form-7/v1/contact-forms/138/feedback" method="post">
+          <label for="emailInput">Email*</label>
+          <input class="form-control" id="emailInput" type="email" name="email" required placeholder="name@example.com">
             <button class="footer-button">
               <div class="arrow-button">
                 <i class="fas fa-chevron-right"></i>
@@ -136,6 +137,7 @@
   <script src="/js/app.js"></script>
   <script src="/js/index.js"></script>
   <script src="/js/scrollingCards.js"></script>
+  <script src="/js/footerContact.js"></script>
   
 </body>
 </html>
