updated footer signup

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div class="footer-content">
       <div class="footer-form-wrapper">
         <h4 class="footer-heading">Get stories straight to your inbox?</h4>
-        <form class="footer-form" action="http://www.makerstories.no/wp-json/contact-form-7/v1/contact-forms/138/feedback" method="post">
+        <form class="footer-form" action="https://noroffcors.herokuapp.com/http://www.makerstories.no/wp-json/contact-form-7/v1/contact-forms/138/feedback"  method="post">
           <label for="emailInput">Email*</label>
           <input class="form-control" id="emailInput" type="email" name="email" required placeholder="name@example.com">
             <button class="footer-button">
