--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Stories created by our creatives around the globe">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -113,10 +114,10 @@
   <footer>
     <div class="footer-content">
       <div class="footer-form-wrapper">
-        <h4 class="footer-heading">Get stories straight to your inbox?</h4>
+        <h3 class="footer-heading">Get stories straight to your inbox?</h3>
         <form class="footer-form" action="https://noroffcors.herokuapp.com/http://www.makerstories.no/wp-json/contact-form-7/v1/contact-forms/138/feedback" method="post">
           <input class="form-control" id="emailInput" type="email" name="email" required placeholder="name@example.com">
-            <button class="footer-button">
+            <button class="footer-button" value="submit">
               <div class="arrow-button">
                 <i class="fas fa-chevron-right"></i>
               </div>
