updated NAV styling

--- a/blog-article.html
+++ b/blog-article.html
@@ -35,14 +35,7 @@
       <nav class="nav-links">
         <ul class="nav-unique" id="nav-unique">
             <li><a href="index.html" class="active nav-style">Home</a></li>
-            <li><a href="blog.html" class="nav-style">Blog</a><button class="blog-button"><i class="fas fa-chevron-down"></i></button>
-              <ul class="blog-content">
-                <li><a href="#" class="nav-style secondary">Photography</a></li>
-                <li><a href="#" class="nav-style secondary">Illustration</a></li>
-                <li><a href="#" class="nav-style secondary">Music</a>
-                <li><a href="#" class="nav-style secondary">film</a>
-              </ul>
-            </li>
+            <li><a href="blog.html" class="nav-style">Blog</a></li>
             <li><a href="about.html" class="nav-style">About Us</a></li>
             <li><a href="contact.html" class="nav-style">Contact</a></li>
         </ul>
