--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="footer-form-wrapper">
         <h3 class="footer-heading">Get stories straight to your inbox?</h3>
         <form class="footer-form" action="https://noroffcors.herokuapp.com/http://www.makerstories.no/wp-json/contact-form-7/v1/contact-forms/138/feedback" method="post">
-          <input class="form-control" id="emailInput" type="email" name="email" required placeholder="name@example.com">
+          <input class="form-control" id="emailFooter" type="email" name="email" required placeholder="name@example.com">
             <button class="footer-button" value="submit">
               <div class="arrow-button">
                 <i class="fas fa-chevron-right"></i>
@@ -119,10 +119,10 @@
       </div>
       <div class="footer-links">
         <ul class="footer-link-layout">
-          <li><a class="footer-link-style" href="">Contact</a></li>
-          <li><a class="footer-link-style" href="">About Us</a></li>
-          <li><a class="footer-link-style" href="">Facebook</a></li>
-          <li><a class="footer-link-style" href="">Instagram</a></li>
+          <li><a class="footer-link-style" href="/contact.html">Contact</a></li>
+          <li><a class="footer-link-style" href="/about.html">About Us</a></li>
+          <li><a class="footer-link-style" href="#">Facebook</a></li>
+          <li><a class="footer-link-style" href="#">Instagram</a></li>
         </ul>
       </div>
     </div>
@@ -130,8 +130,7 @@
   <script src="/js/app.js"></script>
   <script src="/js/index.js"></script>
   <script src="/js/scrollingCards.js"></script>
-  <script src="/js/footerContact.js"></script>
-  
+
 </body>
 </html>
 
