--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
       <form id="contact-form" action="https://www.makerstories.no/wp-json/contact-form-7/v1/contact-forms/138/feedback" method="post">
         <div class="form-styles">
           <label for="your-name">Name*</label>
-          <input class="form-control" id="your-name" type="text" name="your-name" minlength="5" required placeholder="Name here" title="Should be more than 5 characters long">
+          <input class="form-control" id="your-name" type="text" name="your-name" minlength="5" placeholder="Name here" title="Should be more than 5 characters long">
           <small class="error-message">Please enter a valid e-mail address</small>
           <label for="emailInput">Email*</label>
           <input class="form-control" id="emailInput" type="email" name="email" required placeholder="name@example.com">
