updated email input

--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,8 @@
           <label for="your-name">Name*</label>
           <input class="form-control" id="your-name" type="text" name="your-name" minlength="5" placeholder="Name here" title="Should be more than 5 characters long">
           <small class="error-message">Please enter a valid e-mail address</small>
-          <label for="emailInput">Email*</label>
-          <input class="form-control" id="emailInput" type="email" name="email" required placeholder="name@example.com">
+          <label for="your-email">Email*</label>
+          <input class="form-control" id="your-email" type="email" name="your-email" placeholder="name@example.com">
           <small class="error-message">Please enter a valid e-mail address</small>
           <label for="subjectInput">Subject*</label>
           <input class="form-control" id="subjectInput" type="text" name="subject" minlength="15" maxlength="50" required placeholder="Subject here" title="Should be more than 15 characters long">
