--- a/contact.html
+++ b/contact.html
@@ -56,8 +56,8 @@
           <label for="your-email">Email*</label>
           <input class="form-control" id="your-email" type="email" name="your-email" placeholder="name@example.com">
           <small class="error-message">Please enter a valid e-mail address</small>
-          <label for="subjectInput">Subject*</label>
-          <input class="form-control" id="subjectInput" type="text" name="subject" minlength="15" maxlength="50" required placeholder="Subject here" title="Should be more than 15 characters long">
+          <label for="your-subject">Subject*</label>
+          <input class="form-control" id="your-subject" type="text" name="your-subject" minlength="15" maxlength="50" placeholder="Subject here" title="Should be more than 15 characters long">
           <small class="error-message">Please enter a valid e-mail address</small>
           <label for="messageInput">Message*</label>
           <textarea class="form-control" id="messageInput" type="text" name="message" cols="30" rows="10" minlength="25" required placeholder="Message here" title="Should be more than 25 characters long"></textarea>
