updated form URL

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
   </header>
   <main>
     <div class="form-container">
-      <form id="contact-form" method="post">
+      <form id="contact-form" action="https://www.makerstories.no/wp-json/contact-form-7/v1/contact-forms/138/feedback" method="post">
         <div class="form-styles">
           <label for="nameInput">Name*</label>
           <input class="form-control" id="nameInput" type="text" name="name" minlength="5" required placeholder="Name here" title="Should be more than 5 characters long">
