--- a/thank-you.html
+++ b/thank-you.html
@@ -20,12 +20,11 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
   </script>
-  <title>Makers | Contact</title>
+  <title>Makers | Thank you</title>
   <link rel="stylesheet" href="/css/global.css">
-  <link rel="stylesheet" href="/css/contact.css">
   <link rel="stylesheet" href="/css/media.css">
 </head>
-<body class="page-wrapper contact">
+<body class="page-wrapper">
   <header class="header-layout">
     <a href="/index.html">
       <img src="/assets/logo/makers-logo@2x.png" class="logo" alt="Makers logo">
@@ -33,10 +32,10 @@
     <div class="nav-align">
       <nav class="nav-links">
         <ul class="nav-unique" id="nav-unique">
-            <li><a href="index.html" class="nav-style">Home</a></li>
+            <li><a href="index.html" class=" nav-style">Home</a></li>
             <li><a href="blog.html" class="nav-style">Blog</a></li>
             <li><a href="about.html" class="nav-style">About Us</a></li>
-            <li><a href="contact.html" class="active nav-style">Contact</a></li>
+            <li><a href="contact.html" class="nav-style">Contact</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
@@ -47,31 +46,12 @@
     </div>
   </header>
   <main>
-    <div class="form-container">
-      <form id="contact-form" action="https://www.makerstories.no/wp-json/contact-form-7/v1/contact-forms/138/feedback" method="post">
-        <div class="form-styles">
-          <label for="your-name">Name*</label>
-          <input class="form-control" id="your-name" type="text" name="your-name" minlength="5" required placeholder="Name here" title="Should be more than 5 characters long">
-          <small class="error-message">Please enter a valid e-mail address</small>
-          <label for="your-email">Email*</label>
-          <input class="form-control" id="your-email" type="email" name="your-email" required placeholder="name@example.com">
-          <small class="error-message">Please enter a valid e-mail address</small>
-          <label for="your-subject">Subject*</label>
-          <input class="form-control" id="your-subject" type="text" name="your-subject" minlength="15" maxlength="50" required placeholder="Subject here" title="Should be more than 15 characters long">
-          <small class="error-message">Please enter a valid e-mail address</small>
-          <label for="your-message">Message*</label>
-          <textarea class="form-control" id="your-message" type="text" name="your-message" cols="30" rows="10" minlength="25" required placeholder="Message here" title="Should be more than 25 characters long"></textarea>
-          <small class="error-message">Please enter a valid e-mail address</small>
-          <button class="contact-button">Submit</button>
-        </div>
-      </form>
+    <div class="thank-container">
+      <p>Thanks for submitting your form</p>
     </div>
-
   </main>
   <footer>
-
   </footer>
-  <script src="/js/contact.js"></script>
-  <script src="/js/app.js"></script>
+<script src="/js/app.js"></script>
 </body>
 </html>
