created splash page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
   <link rel="stylesheet" href="/css/media.css">
 </head>
 <body class="page-wrapper">
+  <div class="splash">
+    <div class="fade-in">
+      <img src="/assets/logo/makers-logo@2x.png" class="logo" alt="Makers logo">
+      <div class="splash-heading">Welcome to our home.</div>
+      <p class="splash-text">Here you will meet some of the most adventurous creators out there, interact with their creations as well as joining our global network.</p>
+    </div>
+  </div>
   <header class="header-layout">
     <a href="/index.html">
       <img src="/assets/logo/makers-logo@2x.png" class="logo" alt="Makers logo">
